# DARC

./: .flake8  .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.py  user.py
.github/: rename_project.sh
.github/backup/: requirements.txt  setup.py
.github/workflows/: dev.yml
darc/: __main__.py  actor.py  attacker.py  base.py  cli.py  controller.py  database.py  evaluator.py  filter.py  leaderboard.py  llm.py  logger.py  message.py  node.py  node_gate.py  router.py
darc/agent/: dev.py
darc/ain/: .gitignore  README.md  client.py  filesketch.txt  masrpc_pb2.py  masrpc_pb2_grpc.py  mix.exs  python_test.py  python_usage.py  repo_sketch.json  script.exs  test.py  user.py  vm.args
darc/darc/: actor.py  controller.py  message.py  multi_addr.py  node.py  node_gate.py  router.py
darc/environment/: cicd.py
darc/example/: scale_graph.py
darc/mock/: mock_llm_query.py
darc/models/: interface.py
darc/visual/: visual.py
llmsafetychallenge/: __main__.py  base.py  cli.py
llmsafetychallenge/core/: actor.py  node_gate.py
tests/: test_actor.py  test_async.py  test_base.py  test_controller.py  test_dev_group.py  test_logger.py  test_mem.py  test_node.py  test_node_gate.py  test_query.py  test_router.py
tests/darc_test/: test_actor.py  test_base.py  test_log.py  test_message.py  test_node.py  test_node_gate.py  test_router.py
tests/env_test/: test_env_cicd.py
(+128 files in other folders)
