[tool.poetry]
name = "darc"
version = "0.1.0"
description = ""
authors = ["rochacbruno"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.10.0"
pytest = "^8.2.0"
pykka = "^4.0.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.1"
black = "^24.4.2"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
gitchangelog = "^3.0.4"
mkdocs = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
darc = 'darc.__main__:main'
